# FastAPI_parser

./: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
backend/src/: main.py
backend/src/api/: routers.py
backend/src/api/v1/: routers.py
backend/src/api/v1/auth/: routers.py  schemas.py  services.py
backend/src/api/v1/parser/: models.py
backend/src/api/v1/user/: models.py  routers.py  schemas.py  services.py
backend/src/common/convert/: user.py
backend/src/core/: settings.py
backend/src/database/: base.py  database.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 01ff580d8579_add_ad_model.py  659f48e9aceb_initial_tables.py
backend/src/database/repositories/: user_repo.py
backend/src/parser/: main_parser.py  video_surveillance_parser.py
backend/src/security/: auth_security.py  jwt_security.py
